border on sign up button correct, other nav links' spacing correct except for sign up button

--- a/style.css
+++ b/style.css
@@ -8,22 +8,29 @@ body {
 .navbar {
     padding: 2px;
 }
+
+/* "Ibotta" */
 .navbar-brand {
     font-size: 30px;
     letter-spacing: 1.5px;
     margin-left: 3%;
-
 }
 
 a {
     color: white!important;
-
 }
 
+/* Link list on the right as a whole unit */
 .navbar-nav {
-    margin-left: 67%;
+    margin-left: 60%;
 }
 
+/* Individual links from right-hand side link list */
 .nav-link {
-    margin-right: 5px;
+    margin-right: 17px;
+}
+
+.signUpBtn {
+    border: 1px solid rgba(74,74,74, .5);
+    border-radius: 5px;
 }
